--- a/house_pred.ipynb
+++ b/house_pred.ipynb
@@ -1317,7 +1317,7 @@
    ],
    "source": [
     "from joblib import dump, load\n",
-    "with open('models/house_pred.pkl','wb') as f:\n",
+    "with open('house_pred.pkl','wb') as f:\n",
     "    dump(model, f)\n",
     "    print(\"model dumped successfully\")"
    ]
